learn sorting from List Set and Map