@@ -1,15 +1,11 @@
 package collections;
 
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 
 public class SetRunner {
 
 	public static void main(String[] args) {
-		List<Character> characters = List.of('A','Z','A', 'B', 'Z','F');
+		List<Character> characters = Arrays.asList('A', 'Z', 'A', 'B', 'Z', 'F');
 		//unique - Set
 		// Tree
 		// Hash
